# chess_omega

./: .gitignore  pyproject.toml
game_logic/: board_position.py  chess_board.py  chess_game.py  constants.py  exceptions.py  figure_abilities.py  figures.py
tests/: test_chess_game.py
