[tool.poetry]
name = "omegachess"
version = "0.1.0"
description = ""
authors = ["Maxim Marchenko <maximoous4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
